--- a/public/styles/site/_icons.scss
+++ b/public/styles/site/_icons.scss
@@ -70,6 +70,7 @@ li[data-type]{
 	background-position-x: $navbar-icon-position-x;
 	background-position-y: $navbar-icon-position-y;
 	background-repeat: no-repeat;
+	background-position: 50% 30%;
 }
 @media (max-width: 767px) {
 	li[data-type]{
